[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_downscaling_emulator"
version = "0.0.1"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for score-based generative models using SDEs for downscaling precipitation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/henryaddison/score_sde_pytorch"
"Bug Tracker" = "https://github.com/henryaddison/score_sde_pytorch/issues"

[project.scripts]
    mlde = "ml_downscaling_emulator.bin:app"
